# CGDev

./: .gitignore  README.md
Notes/: dev_notes.md
Tools/: CMakeLists.txt
Tools/Source/Private/: _tools.h  log.cpp  log.h  object.h  object.hpp
Новая папка/: gpu.h  gpu_device.cpp  gpu_device.h  gpu_device.hpp  gpu_library.cpp  gpu_library.h  gpu_library.hpp  gpu_object.cpp  gpu_object.h  gpu_vkn_device.cpp  gpu_vkn_device.h  gpu_vkn_device.hpp  gpu_vkn_library.cpp  gpu_vkn_library.h  gpu_vkn_library.hpp  hcpi_library.cpp  hcpi_library.h  hcpi_library.hpp  hcpi_library_vulkan.cpp  hcpi_library_vulkan.h  hcpi_library_vulkan.hpp  log.cpp  log.h  pch.h  render_buffer.cpp  render_buffer.h  render_buffer.hpp  render_buffer_vulkan.cpp  render_buffer_vulkan.h  rpi.cpp  (+13 more)
Новая папка (2)/: vkn_ext_debug_utils_commands_test.cpp  vkn_ext_debug_utils_commands_test.h  vkn_ext_debug_utils_test.cpp  vkn_ext_debug_utils_test.h
Новая папка (3)/: wvk_base_commands.h  wvk_commands.cpp  wvk_commands.h  wvk_commands.hpp  wvk_commands_global_test.cpp  wvk_commands_global_test.h  wvk_commands_instance_test.h  wvk_ext_debug_utils_commands.cpp  wvk_ext_debug_utils_commands.h  wvk_ext_debug_utils_commands.hpp  wvk_khr_get_physical_device_properties2_dispatch_table.hpp  wvk_khr_get_surface_capabilities2_dt.hpp  wvk_khr_get_surface_capabilities2_test.h  wvk_khr_surface_dt.hpp  wvk_khr_win32_surface_dispatch_table_test.h  wvk_loader_dispatch_table.cpp  wvk_loader_dispatch_table.h  wvk_loader_dispatch_table.hpp  wvk_loader_dispatch_table_test.cpp  wvk_loader_test.cpp
Новая папка (4)/: tools.h
(+171 files in other folders)
